# scheme_approx

./: .gitignore  .gitmodules  CMakeLists.txt  common.cpp  common.h  main.cpp  task1.cpp  task_1.cpp  task_1.h  task_2.cpp  task_2.h  task_3.cpp  task_3.h  task_4.cpp  task_4.h  trap.cpp  Распределение задач по фамилиям.xlsx
